--- a/.github/ISSUE_TEMPLATE/버그-수정.md
+++ b/.github/ISSUE_TEMPLATE/버그-수정.md
@@ -7,17 +7,17 @@ assignees: ''
 
 ---
 
-### 1. 개요 (한 줄로 간단하게 작성)
-* 
+#### 1. 개요 (한 줄로 간단하게 작성)
+- 
 
-### 2. 재현 과정 (버그가 발생하는 과정을 순서대로 작성)
-* 1)
+#### 2. 재현 과정 (버그가 발생하는 과정을 순서대로 작성)
+- 
 
-### 3. 예상 결과 (재현 과정을 이행 했을 때 예상 결과)
-* 
+#### 3. 예상 결과 (재현 과정을 이행 했을 때 예상 결과)
+- 
 
-### 4. 실제 결과 (재현 과정을 이행 했을 때 실제 결과)
-* 
+#### 4. 실제 결과 (재현 과정을 이행 했을 때 실제 결과)
+- 
 
-### 5. 비고 (기타 사항)
-*
+#### 5. 비고 (기타 사항)
+-
